Update spacing to prevent wrapping when displaying some data not meeting message

--- a/frontend/src/app/shared/components/wdf-summary-panel/wdf-summary-panel.component.scss
+++ b/frontend/src/app/shared/components/wdf-summary-panel/wdf-summary-panel.component.scss
@@ -1,10 +1,10 @@
 .summary-section {
   &__title {
-    width: 31%;
+    width: 29%;
     padding: 0 15px;
   }
 
   &__summary-text {
-    width: 69%;
+    width: 71%;
   }
 }
